# DayFora

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  BUILD_PLAN.md  DATA_MODEL.md  PRODUCT.md  README.md  UI_UX.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  activity_consistency.py  main.py  reminders.py  schemas.py
backend/app/agent/: __init__.py  graph.py  memory.py  retrieval.py  schemas.py  state.py  streak.py
backend/app/agent/adapters/: __init__.py  langchain_openai.py
backend/app/agent/notebooks/: dayfora.ipynb
backend/app/agent/tools/: __init__.py  supabase.py
backend/dayfora_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_diary_first_contracts.py  test_entry_presentation.py  test_explore.py  test_health.py  test_routes.py
backend/tests/agent/: test_graph.py  test_memory.py  test_schemas.py  test_streak.py  test_tools.py
mobile/: .env.example  App.tsx  app.json  eas.json  eslint.config.js  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/src/components/: AppTabBar.tsx  (+3 more)
supabase/: README.md
supabase/migrations/: 202607170001_initial_dayfora.sql  202607180003_activity_timezones_and_notification_deliveries.sql  202607190005_diary_addenda.sql  202607190006_activity_consistency.sql  202607200007_diary_day_feeling.sql  202607200008_diary_entry_processing_status.sql  202607200009_capture_day_feeling.sql  202607200010_agent_insights.sql  202607200011_diary_first_v1.sql  202607210012_diary_hybrid_retrieval.sql
(+21 files in other folders)
