[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dayfora-api"
version = "0.1.0"
description = "DayFora FastAPI application"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-postgres>=3.0,<4.0",
  "langchain-openai>=1.0,<2.0",
  "openai>=1.50,<2.0",
  "psycopg[binary,pool]>=3.2,<4.0",
  "supabase>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-dotenv>=1.0,<2.0",
  "langchain-groq>=1.1.3",
  "langchain-google-genai>=4.2.7",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["app/agent/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
